# pizza-reader

./: .gitignore  README.md  pubspec.yaml  sdk.md
.github/workflows/: deploy-rabbit-pages.yml  pages.yml
docs/: supabase.md
lib/: main.dart
lib/src/core/: pizza_book_codec.dart
lib/src/importing/: pizza_importer.dart
lib/src/reader/: reader_controller.dart  reading_pace.dart
lib/src/supabase/: auth_repository.dart  fake_auth_repository.dart  fake_library_repository.dart  library_repository.dart  supabase.dart  supabase_config.dart
lib/src/ui/: pizza_reader_app.dart  pizza_theme.dart
pizza-baker/: .gitignore  README.md  pyproject.toml
pizza-baker/src/pizza_baker/: __init__.py  api.py  baker.py  cli.py  codex.py  epub.py  model.py
pizza-baker/tests/: test_baker.py  test_epub.py  test_model.py  testing.py
pizza-reader/: pubspec.yaml
pizza-reader-rabbit/: README.md  app.js  creation.json  index.html  qr-page.css  qr-page.js  qr-scanner.js  qr.html  styles.css
pizza-reader-rabbit/books/: the-war-of-art.pizzabook.json
pizza-reader/android/app/: build.gradle.kts
pizza-reader/docs/: supabase.md
pizza-reader/test/core/: pizza_book_codec_test.dart
supabase/migrations/: 20260425162000_initial_library_sync.sql  20260426063500_use_json_storage_objects.sql
test/: widget_test.dart
test/core/: pizza_book_codec_test.dart
test/importing/: pizza_importer_test.dart
test/reader/: reading_pace_test.dart  word_tokenizer_test.dart
test/supabase/: fake_library_repository_test.dart  supabase_config_test.dart
web/: index.html  manifest.json
(+12 files in other folders)
