[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pizza-baker"
version = "0.1.0"
description = "Bake EPUB files into PizzaReader .pizzabook documents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30",
]

[project.scripts]
pizza-baker = "pizza_baker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
